# ia-challenge

./: .env.example  .gitignore  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
agents/: hook.py  image_generator.py
db/: connection.py
devops/: compose.yml
devops/nginx/: Dockerfile  nginx.conf
utils/: environment.py  logger.py
